--- a/pages/quiz/quiz.css
+++ b/pages/quiz/quiz.css
@@ -58,16 +58,33 @@ header {
 }
 
 .assunto_icone {
-    background: var(--bg-acessibilidade);
     width: 40px;
     height: 40px;
     padding: 5px;
     border-radius: 5px;
 }
 
+.assunto_icone.html {
+    background: var(--bg-html);
+}
+
+.assunto_icone.css {
+    background: var(--bg-css);
+}
+
+.assunto_icone.javascript {
+    background: var(--bg-javascript);
+}
+
+.assunto_icone.acessibilidade {
+    background: var(--bg-acessibilidade);
+}
+
 .assunto_icone img {
     width: 100%;
 }
+
+
 
 .assunto h1 {
     font-size: 18px;
