--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
     --secondary-text-color: #626c7f;
     --button-bg:#fff;
     --shadow: 0px 16px 40px 0px rgba(163,160,193,0.14);
-    --bg-html:#fff;
+    --bg-html:#fff1e9;
     --bg-css:#e0fdef;
     --bg-javascript:#ebf0ff;
     --bg-acessibilidade:#f6e7ff;
@@ -80,7 +80,7 @@ main {
     padding: 32px 24px;
 }
 
-.boas-vindas {
+.boas_vindas {
     margin-bottom: 40px;
 }
 
